youfull/objects/User_History__c.object
<CustomObject>
    <description>Custom Object to track changes for user records</description>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <picklist>
            <picklistValues>
                <fullName>Zip/Postal Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAML Federation ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Username</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZM Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USER_CNTRY_CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number of Assigned Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_TAG_1_HDR_TXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_ID_ZONE_CD_KEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_ID_ACCT_NR_KEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLPLN_CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAX_EMAIL_LIMIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>API name of the field that changed</description>
        <inlineHelpText>API name of the field that changed</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User History</label>
    <nameField>
        <displayFormat>UH-{0}</displayFormat>
        <label>User History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>